# temoto2

./: .gitignore  Doxyfile  LICENSE  readme.md  sensor_description.yaml
refacto/temoto_context_manager/: CMakeLists.txt  package.xml
refacto/temoto_context_manager/src/: context_manager.cpp  context_manager_containers.cpp  context_manager_node.cpp
refacto/temoto_context_manager/srv/: AddObjects.srv  LoadSpeech.srv  LoadTracker.srv  TrackObject.srv
refacto/temoto_core/: CMakeLists.txt  package.xml
refacto/temoto_core/msg/: RMPResponse.msg
refacto/temoto_core/srv/: ResourceStatus.srv
refacto/temoto_er_manager/: CMakeLists.txt  package.xml
refacto/temoto_er_manager/src/: temoto_er_manager.cpp  temoto_er_manager_node.cpp
refacto/temoto_er_manager/srv/: LoadExtResource.srv
refacto/temoto_sensor_manager/: CMakeLists.txt  package.xml
refacto/temoto_sensor_manager/src/: sensor_info.cpp  sensor_info_registry.cpp  sensor_manager_node.cpp  sensor_manager_servers.cpp  sensor_snooper.cpp
refacto/temoto_sensor_manager/srv/: LoadSensor.srv
tasks/task_temoto/: CMakeLists.txt  description.xml  package.xml
tasks/task_temoto/src/: task_temoto.cpp
temoto_2/: CMakeLists.txt  mainpage.dox  package.xml  rosdoc.yaml
temoto_2/conf/: console.conf  operator.yaml  robemoto.yaml  robemoto_sensors.yaml  tracking_methods.yaml  vaultbot.yaml  veikumoto.yaml  veikumoto_sensors.yaml
temoto_2/file_templates/: ai_footer.xml  ai_get_solution.xml  ai_start_task_case.xml  ai_subject_in_data_in.xml  ai_subject_in_data_out.xml  ai_subject_in_word_out.xml  ai_subject_out.xml  temoto_ai_cmakelists.xml  temoto_ai_packagexml.xml
temoto_2/include/TTP/: TTP_errors.h  io_descriptor.h  task_container.h  task_descriptor.h  task_descriptor_processor.h  task_manager.h  task_tree.h  task_tree_node.h  tasking_core.h
temoto_2/include/algorithm_manager/: algorithm_info.h  algorithm_info_registry.h  algorithm_manager.h  algorithm_manager_errors.h  algorithm_manager_interface.h  algorithm_manager_servers.h  algorithm_manager_services.h  algorithm_snooper.h  sensor_info.h
temoto_2/include/base_error/: base_error.h
temoto_2/include/base_task/: task.h  task_errors.h
temoto_2/include/common/: base_resource.h  base_subsystem.h  console_colors.h  interface_errors.h  reliability.h  request_container.h  resource.h  resource_entry.h  resource_manager.h  semantic_frame_legacy.h  temoto_id.h  temoto_log_macros.h  tools.h  topic_container.h
temoto_2/include/context_manager/: algorithm_info.h  context_manager.h  context_manager_containers.h  context_manager_errors.h  context_manager_interface.h  context_manager_services.h  tracking_method.h
temoto_2/include/core/: common.h  core_errors.h
temoto_2/include/node_manager/: .node_manager.h.swp  .node_manager_errors.h.swp  node_manager.h  node_manager_errors.h  node_manager_services.h
temoto_2/include/output_manager/: output_manager_errors.h  output_manager_interface.h  output_manager_services.h
temoto_2/include/package_info/: package_info.h
temoto_2/include/process_manager/: external_resource_manager_interface.h  process_manager.h  process_manager_errors.h  process_manager_services.h
temoto_2/include/rmp/: base_resource_client.h  base_resource_server.h  client_query.h  config_synchronizer.h  log_macros.h  resource_client.h  resource_manager.h  resource_manager_services.h  resource_query.h  resource_server.h  server_query.h
temoto_2/include/robot_manager/: robot.h  robot_config.h  robot_feature.h  robot_features.h  robot_info.h  robot_manager.h  robot_manager_errors.h  robot_manager_interface.h  robot_manager_services.h
temoto_2/include/sensor_manager/: sensor_info.h  sensor_info_database.h  sensor_info_registry.h  sensor_manager.h  sensor_manager_errors.h  sensor_manager_interface.h  sensor_manager_servers.h  sensor_manager_services.h  sensor_manager_yaml.h  sensor_snooper.h
temoto_2/include/temoto_2/: human_context_interface.h  test_tool.h
temoto_2/include/temoto_error/: temoto_error.h
temoto_2/launch/: algorithm_info_test.launch  d435.launch  dual_temoto.launch  hokuyo.launch  operator.launch  r200.launch  robemoto.launch  rviz.launch  sick.launch  sr300_in_the_world.launch  temoto_2.launch  temoto_agent.launch  temoto_terminal.launch  test_1.launch  test_2.launch  vaultbot.launch  veikumoto.launch
temoto_2/msg/: ConfigSync.msg  ErrorStack.msg  GestureSpecifier.msg  ObjectContainer.msg  RMPRequest.msg  RMPResponse.msg  RMPStatus.msg  SensorInfoSync.msg  SpeechSpecifier.msg  StopTaskMsg.msg
temoto_2/msg/context_manager/: ObjectContainer.msg
temoto_2/msg/error_msgs/: BaseError.msg  ErrorStack.msg
temoto_2/scripts/: install_meta.sh  install_temoto_deps.sh  urdf_loader.py
temoto_2/src/: agent_core.cpp  human_context.cpp  human_context_interface.cpp
temoto_2/src/TTP/: io_descriptor.cpp  task_container.cpp  task_descriptor.cpp  task_descriptor_processor.cpp  task_manager.cpp  (+3 more)
temoto_2/srv/: ListDevices.srv  LoadProcess.srv  LoadResource.srv  LoadSensor.srv  UnloadResource.srv  nodeSpawnKill.srv  startSensorRequest.srv  stopAllocatedServices.srv  stopNodeRequest.srv
temoto_2/test/: action_base.cpp  ai_test.cpp  tst_descriptor.xml
temoto_action_assistant/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
temoto_action_assistant/launch/: action_assistant.launch  setup_assistant.launch
temoto_action_assistant/src/: collisions_updater.cpp  setup_assistant_main.cpp
temoto_tests/: CMakeLists.txt  package.xml
temoto_tests/bagfiles/: leap_motion_both_hands_0.bag  leap_motion_left_hand_0.bag  leap_motion_right_hand_0.bag  leap_motion_set_0.bag  leap_motion_set_1.bag  leap_motion_set_2.bag
temoto_tests/camera_calibration/: vaultbot_cam_calibration.yaml
temoto_tests/launch/: ar_track_algorithm.launch  hand_tracker_0.launch  hand_tracker_1.launch  hand_tracker_2.launch  hand_tracker_both_hands_0.launch  hand_tracker_left_hand_0.launch  hand_tracker_right_hand_0.launch  vaultbot_camera.launch
temoto_tests/scripts/: ar.sh  track.sh  track_with_robot.sh
temoto_tests/src/: algorithm_0.cpp  algorithm_1.cpp  sensor_0.cpp
(+462 files in other folders)
