<package>
  <name>temoto_action_assistant</name>
  <version>0.9.11</version>

  <description>Generates a configuration package that makes it easy to use MoveIt!</description>

  <author email="robert.valner@ut.ee">Robert Valner</author>
  <maintainer email="robert.valner@ut.ee">Robert Valner</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend version_gt="0.3.1">srdfdom</build_depend>

  <run_depend>yaml-cpp</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend version_gt="0.3.1">srdfdom</run_depend>

</package>
